infrastructure/k8s/app/my-pub-ip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-pub-ip-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: lirondadon.link
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: "prod-external"
spec:
  rules:
  - host: my-pub-ip.lirondadon.link
    http:
      paths:
      - backend:
          service:
            name: my-pub-ip-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
